--- a/index.html
+++ b/index.html
@@ -46,16 +46,16 @@
 						</div>
 
 						<div class="row">
-							<div class="cell" data-title="Full Name">
+							<div class="cell" data-title="Situation">
 								Keu Pore Gesse
 							</div>
-							<div class="cell" data-title="Age">
+							<div class="cell" data-title="Bhalo Bacha">
 								Jeye Dhorbe Abong Doc Er kase Niye jabe
 							</div>
-							<div class="cell" data-title="Job Title">
+							<div class="cell" data-title="Kharap Bacha">
 								Ahare Bole Chole Jabe
 							</div>
-							<div class="cell" data-title="Location">
+							<div class="cell" data-title="Shoytan Bacha">
 								Hashte Thakbe Jptpkhon keu gali na dey -,-
 							</div>
 						</div>
